implemented contact page foundation

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
             class="icon"
             onclick="location.href='https://www.instagram.com/siva.ezh/'"
           />
+          <img
+            src="./assets/yoyo.png"
+            alt="resume"
+            class="icon"
+            onclick="window.open('./assets/Resume.pdf')"
+          />
         </div> 
     </div>
         <div>
