--- a/About.html
+++ b/About.html
@@ -39,11 +39,11 @@
     <div class="greeting">
         <h1>Hello, I'm <span class="greeting__name">Siva</span></h1>
         
-        <P class="p1">Aspiring software engineer exploring all realms of Health, Wealth and Technology. </P>
+        <p class="p1">Aspiring software engineer exploring all realms of Health, Wealth and Technology. </P>
 
         <p class="p2">Crafting a narrative that captures the journey of personal growth, curating and documenting advancements towards the intersection of professional and health triumphs.</p>
 
-        <P class="p3">Establishing a brand committed to delivering paramount content that meticulously explores the realms of health, wealth, and technology.</P>
+        <p class="p3">Establishing a brand committed to delivering paramount content that meticulously explores the realms of health, wealth, and technology.</P>
 
         <p class="p4"> Weaving together narratives that transcend the conventional, my mission is to curate, present and appreciate insightful perspectives and artwork while fostering a space where quality meets innovation.</p>
     </div>
